# clusterd

./: .gitignore  CMakeLists.txt  Makefile  faq.md  shell.nix
docs/: architecture.2.md  architecture.md
nix/: packages.nix
nix/dqlite/: default.nix
presets/: dlimage  failure-domains  location
presets/cluster.d/: 01-failure-domains.lua
presets/rollcall.d/: 01-basics  100-virtualization
src/include/: uthash.h
src/include/clusterd/: common.h  controller.h  log.h  monitor.h  request.h
src/programs/: Makefile  cluster  clusterctl.c  clusterd  clusterd-config.c  clusterd-controller.1.ronn  clusterd-controller.c  clusterd-ctlcall.7.ronn  clusterd-db.c  clusterd-dns.c  clusterd-endpointd.c  clusterd-exec.1.ronn  clusterd-exec.c  clusterd-host.c  clusterd-kill.c  clusterd-list-failure-domains  clusterd-monitor.1.ronn  clusterd-monitor.c  clusterd-ns.1.ronn  clusterd-ns.c  clusterd-nsportd.c  clusterd-ps.1.ronn  clusterd-ps.c  clusterd-resource.c  clusterd-rollcall  clusterd-rollcall.1.ronn  clusterd-schedule.c  clusterd-service-doctor.1.ronn  clusterd-service.1.ronn  clusterd-service.c  clusterd-setuidgidmap.c  clusterd-supervise.1.ronn  clusterd.1.ronn  clusterd.7.ronn  config.c  config.h  controller-api.lua  controller-schema.sql  libclusterctl.c  libclusterctl.h  (+2 more)
tools/: rc
